--- a/finder.css
+++ b/finder.css
@@ -9,14 +9,14 @@ body {
     padding-left: 0.8rem;
 }
 .navbar-wrapper h1 {
-    color: #fdfffc;
+    color: #04e73c;
     font-size: 2.5em;
     font-family: cursive;
 }
 .searchbar {
     border-radius: 15px;
     border: 0;
-    background-color: #91cded;
+    background-color: #4db0e6;
     margin-top: 40px;
     margin-left: 40px;
     padding: 15px 15px;
@@ -31,10 +31,9 @@ body {
 }
 .card {
     margin: 50px 25px;
-    position: relative;
     padding: 10px 10px;
     background-color: azure;
-    height: 30rem;
+    height: 38rem;
     width: 20rem;
     display: flex;
     flex-direction: column;
@@ -49,49 +48,21 @@ body {
 }
 .card h2 {
     text-align: center;
+    font-family: cursive;
 }
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
+.subheading {
+    font-size: medium;
+    font-family: cursive;
     text-align: center;
 }
+.subheading span {
+    font-weight: bold;
+    font-size: large;
+}
 .card .social {
     display: flex;
     flex-direction: row;
-    gap: 8px;
+    gap: 10px;
 }
 .social img {
     height: 3rem;
@@ -100,350 +71,10 @@ body {
 .button-group {
     display: flex;
     gap: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 .button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
-}
-.card {
-    margin: 50px 25px;
-    position: relative;
-    padding: 10px 10px;
-    background-color: azure;
-    height: 30rem;
-    width: 20rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.card .cardppf {
-    border-radius: 50%;
-    border: 0;
-    height: 7rem;
-    width: 7rem;
-}
-.card h2 {
-    text-align: center;
-}
-.card .social {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-.social img {
-    height: 3rem;
-    width: 3rem;
-}
-.button-group {
-    display: flex;
-    gap: 15px;
-}
-.button-group button {
-    background-color: aquamarine;
-    color: darkorchid;
+    background-color: #70c1b3;
+    color: #131200;
 }
